--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
